production server setup

--- a/api_conn_settings.json
+++ b/api_conn_settings.json
@@ -1,6 +1,6 @@
 {
-	"host": "localhost",
+	"host": "rinke.dyn-vpn.de",
 	"user": "projectillm",
-	"password": "5Hw7mWsXMq4mDhF",
+	"password": "jM5]e7rp@7",
 	"db": "projectillm"
 }
