--- a/api_conn_settings.json
+++ b/api_conn_settings.json
@@ -1,5 +1,5 @@
 {
-	"host": "rinke.dyn-vpn.de",
+	"host": "rinke1.synology.me",
 	"user": "projectillm",
 	"password": "jM5]e7rp@7",
 	"db": "projectillm"
