Am Ende der Jagd - Werden die Hasen gezählt

--- a/api_conn_settings.json
+++ b/api_conn_settings.json
@@ -2,5 +2,6 @@
 	"host": "rinke1.synology.me",
 	"user": "projectillm",
 	"password": "jM5]e7rp@7",
-	"db": "projectillm"
+	"db": "projectillm",
+	"msg_load_num": 20
 }
