--- a/api_conn_settings.json
+++ b/api_conn_settings.json
@@ -1,7 +1,7 @@
 {
 	"host": "rinke.dyn-vpn.de",
 	"user": "projectillm",
-	"password": "jM5]e7rp@7",
+	"password": "fN1_CrHIi0",
 	"db": "projectillm",
 	"msg_load_num": 20,
 	"charset": "UTF8MB4_GENERAL_CI"
